# generative-philter-surrogates

./: README.md  facilities.tsv  gpt_email_address.txt  gpt_fax_extension.txt  gpt_phone_number.txt  pyproject.toml  test.py  tf_npi_address.json  us_census_person_names.txt
generative_philter_surrogates/: __init__.py  cli.py  philter.py  surrogates.py
generative_philter_surrogates/resources/: philter_config.toml  tf_npi_city.json  tf_npi_first_name.json  usa_zip_code.json
tests/: curated.out  synthetic.out  test_transform.py  variety.in  variety.out
